shows page overflow fixed

--- a/scss/style-mwa.scss
+++ b/scss/style-mwa.scss
@@ -368,3 +368,8 @@ header {
     }
 }
 
+#page-shows {
+    &.music-fill .home-fill .music {
+        overflow: auto;
+    }
+}
